@@ -73,6 +73,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7792: Registering non-classes to ABCs raised an obscure error.
+
 - Issue #7785: Don't accept bytes in FileIO.write().
 
 - Issue #7773: Fix an UnboundLocalError in platform.linux_distribution() when
